<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/header_main"
        layout="@layout/header" />

    <TextView
        android:id="@+id/riskscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/semibold"
        android:padding="16dp"
        android:text="@string/risk_score"
        android:textColor="@color/blue_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/low_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_main"
        app:layout_constraintVertical_bias="0" />

    <ImageView
        android:id="@+id/low_circle"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@id/riskscore"
        app:layout_constraintBottom_toTopOf="@id/breakdown_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0"
        app:srcCompat="@drawable/low_circle" />

    <ImageView
        android:id="@+id/breakdown_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/heart_description"
        app:layout_constraintBottom_toTopOf="@+id/test_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/low_circle"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/breakdown" />

    <TextView
        android:id="@+id/test_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue_text"
        android:fontFamily="@font/regular"
        android:text="@string/test_description"
        android:textSize="16sp"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/quizButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breakdown_image" />

    <Button
        android:id="@+id/quizButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:textSize="16sp"
        android:onClick="takeQuiz"
        android:text="@string/retake_quiz"
        android:fontFamily="@font/regular"
        android:weight="0"
        app:layout_constraintBottom_toTopOf="@+id/logout_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/test_description" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="logout"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizButton"
        app:layout_constraintVertical_bias="0.506" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>